# sshpyk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  demo.py  pyproject.toml
.github/workflows/: publish.yml
dangerous/: README.md  config  ssh-sshpass-wrapper
sshpyk/: __init__.py  __main__.py  cli.py  empty_ssh_config  get_all_specs.py  kernelapp.py  provisioning.py  sshd_config  utils.py
sshpyk/kernel/: add.py  ls.py  utils.py
