[project]
name = "sshpyk"
dynamic = ["version"]
description = "remote jupyter kernels via ssh tunnels"
authors = [
    { name = "National Radio Astronomy Observatory", email = "casa-feedback@nrao.edu" },
]
dependencies = ["jupyter-client"]
requires-python = ">=3.8"
readme = "README.rst"
license = { text = "BSD-3-Clause" }

[project.scripts]
sshpyk = "sshpyk.cli:main"

# Integrate with Jupyter Client
[project.entry-points."jupyter_client.kernel_provisioners"]
sshpyk-provisioner = "sshpyk.provisioning:SSHKernelProvisioner"

# Dev config

[project.optional-dependencies]
dev = ["pre-commit"]

[tool]
[tool.pdm]
[tool.pdm.build]
[tool.pdm.version]
source = "scm"
write_to = "sshpyk/__version__.py"
write_template = "__version__ = '{}'" # optional, default to "{}"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

# Ruff is installed and run using pre-commit
[tool.ruff]
line-length = 88
target-version = "py38"
lint.select = ["B", "E", "F", "I", "W", "N", "S"]
lint.ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
[tool.ruff.lint.isort]
known-first-party = ["sshpyk"]
